# Ingestor

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build.yml  security.yml  test.yml
ingestor/: cli.py  config.py  constants.py  logging_utils.py  normalization.py  pipeline.py  quality.py  schema.py  state.py
ingestor/sources/: git.py  hf_repo.py  huggingface.py  kaggle.py  local.py
ingestor/writers/: jsonl_writer.py
scripts/: converter.py  insights.py  setup_fasttext.py
test-data/: benign.jsonl  mixed.jsonl  prompt_injection.jsonl  sample.config.yaml
tests/: test_cli.py  test_local_source_pipeline.py  test_normalization_schema.py  test_quality.py  test_stability.py  test_state_writer.py
